<resources>
    <string name="app_name">Test2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Item1">Item 1</string>
    <string name="Item2">Item 2</string>
    <string name="Item3">Item 3</string>
    <string name="Item4">Item 4</string>
    <string name="Item5">Item 5</string>
</resources>
